Web title frissítés: Lomedu Admin -> Lomedu.hu

--- a/web/index.html
+++ b/web/index.html
@@ -23,12 +23,12 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Lomedu Admin">
+  <meta name="apple-mobile-web-app-title" content="Lomedu.hu">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
 
   <link rel="icon" type="image/png" href="data:,"/>
-  <title>Lomedu Admin</title>
+  <title>Lomedu.hu</title>
   <link rel="manifest" href="manifest.json">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
