--- a/web/index.html
+++ b/web/index.html
@@ -24,11 +24,11 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Lomedu.hu">
+  <meta name="apple-mobile-web-app-title" content="Lomedu">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-
-  <link rel="icon" type="image/png" href="data:,"/>
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="favicon.png"/>
   <title>Lomedu.hu</title>
   <link rel="manifest" href="manifest.json">
   <script src="https://cdn.tailwindcss.com"></script>
